# web-service-example-python

./: .gitignore  Makefile  Makefile~  README.md  pyproject.toml
config/: production.yaml
docker/server/: Dockerfile  Dockerfile~  docker-compose.yml  docker-compose.yml~
